Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/V3d/V3dView.h

extern "C" DECL_EXPORT void V3d_View_SetWindow6DD76FB2(
	void* instance,
	void* IdWin);
extern "C" DECL_EXPORT void V3d_View_SetMagnifyD520CBEE(
	void* instance,
	void* IdWin,
	void* aPreviousView,
	int x1,
	int y1,
	int x2,
	int y2);
extern "C" DECL_EXPORT void V3d_View_Remove(void* instance);
extern "C" DECL_EXPORT void V3d_View_Update(void* instance);
extern "C" DECL_EXPORT void V3d_View_Redraw(void* instance);
extern "C" DECL_EXPORT void V3d_View_Redraw8C6D7843(
	void* instance,
	int x,
	int y,
	int width,
	int height);
extern "C" DECL_EXPORT void V3d_View_MustBeResized(void* instance);
extern "C" DECL_EXPORT void V3d_View_DoMapping(void* instance);
extern "C" DECL_EXPORT void V3d_View_UpdateLights(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetBackgroundColor638950E1(
	void* instance,
	int Type,
	double V1,
	double V2,
	double V3);
extern "C" DECL_EXPORT void V3d_View_SetBackgroundColor8FD7F48(
	void* instance,
	void* Color);
extern "C" DECL_EXPORT void V3d_View_SetBackgroundColor48F4F471(
	void* instance,
	int Name);
extern "C" DECL_EXPORT void V3d_View_SetBgGradientColorsA313F140(
	void* instance,
	void* Color1,
	void* Color2,
	int FillStyle,
	bool update);
extern "C" DECL_EXPORT void V3d_View_SetBgGradientColors4216A027(
	void* instance,
	int Color1,
	int Color2,
	int FillStyle,
	bool update);
extern "C" DECL_EXPORT void V3d_View_SetBgGradientStyle86DFD8CC(
	void* instance,
	int AMethod,
	bool update);
extern "C" DECL_EXPORT void V3d_View_SetBackgroundImage5C59B37F(
	void* instance,
	char* FileName,
	int FillStyle,
	bool update);
extern "C" DECL_EXPORT void V3d_View_SetBgImageStyle254163A9(
	void* instance,
	int FillStyle,
	bool update);
extern "C" DECL_EXPORT void V3d_View_SetAxisBC7A5786(
	void* instance,
	double X,
	double Y,
	double Z,
	double Vx,
	double Vy,
	double Vz);
extern "C" DECL_EXPORT void V3d_View_SetAntialiasingOn(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetAntialiasingOff(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetZCueingOn(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetZCueingOff(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetLightOn1C16FAC6(
	void* instance,
	void* MyLight);
extern "C" DECL_EXPORT void V3d_View_SetLightOn(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetLightOff1C16FAC6(
	void* instance,
	void* MyLight);
extern "C" DECL_EXPORT void V3d_View_SetLightOff(void* instance);
extern "C" DECL_EXPORT bool V3d_View_IsActiveLight1C16FAC6(
	void* instance,
	void* aLight);
extern "C" DECL_EXPORT void V3d_View_SetPlaneOn20B19CEF(
	void* instance,
	void* MyPlane);
extern "C" DECL_EXPORT void V3d_View_SetPlaneOn(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetPlaneOff20B19CEF(
	void* instance,
	void* MyPlane);
extern "C" DECL_EXPORT void V3d_View_SetPlaneOff(void* instance);
extern "C" DECL_EXPORT bool V3d_View_IsActivePlane20B19CEF(
	void* instance,
	void* aPlane);
extern "C" DECL_EXPORT void V3d_View_ZBufferTriedronSetup9BCB825E(
	void* instance,
	int XColor,
	int YColor,
	int ZColor,
	double SizeRatio,
	double AxisDiametr,
	int NbFacettes);
extern "C" DECL_EXPORT void V3d_View_TriedronDisplay4E80490A(
	void* instance,
	int APosition,
	int AColor,
	double AScale,
	int AMode);
extern "C" DECL_EXPORT void V3d_View_TriedronErase(void* instance);
extern "C" DECL_EXPORT void V3d_View_TriedronEcho14CB0F5D(
	void* instance,
	int AType);
extern "C" DECL_EXPORT void V3d_View_GetGraduatedTrihedronC3638B35(
	void* instance,
	void* xname,
	void* yname,
	void* zname,
	bool* xdrawname,
	bool* ydrawname,
	bool* zdrawname,
	bool* xdrawvalues,
	bool* ydrawvalues,
	bool* zdrawvalues,
	bool* drawgrid,
	bool* drawaxes,
	int* nbx,
	int* nby,
	int* nbz,
	int* xoffset,
	int* yoffset,
	int* zoffset,
	int* xaxisoffset,
	int* yaxisoffset,
	int* zaxisoffset,
	bool* xdrawtickmarks,
	bool* ydrawtickmarks,
	bool* zdrawtickmarks,
	int* xtickmarklength,
	int* ytickmarklength,
	int* ztickmarklength,
	void* gridcolor,
	void* xnamecolor,
	void* ynamecolor,
	void* znamecolor,
	void* xcolor,
	void* ycolor,
	void* zcolor,
	void* fontOfNames,
	int styleOfNames,
	int* sizeOfNames,
	void* fontOfValues,
	int styleOfValues,
	int* sizeOfValues);
extern "C" DECL_EXPORT void V3d_View_GraduatedTrihedronDisplayC3638B35(
	void* instance,
	void* xname,
	void* yname,
	void* zname,
	bool xdrawname,
	bool ydrawname,
	bool zdrawname,
	bool xdrawvalues,
	bool ydrawvalues,
	bool zdrawvalues,
	bool drawgrid,
	bool drawaxes,
	int nbx,
	int nby,
	int nbz,
	int xoffset,
	int yoffset,
	int zoffset,
	int xaxisoffset,
	int yaxisoffset,
	int zaxisoffset,
	bool xdrawtickmarks,
	bool ydrawtickmarks,
	bool zdrawtickmarks,
	int xtickmarklength,
	int ytickmarklength,
	int ztickmarklength,
	void* gridcolor,
	void* xnamecolor,
	void* ynamecolor,
	void* znamecolor,
	void* xcolor,
	void* ycolor,
	void* zcolor,
	void* fontOfNames,
	int styleOfNames,
	int sizeOfNames,
	void* fontOfValues,
	int styleOfValues,
	int sizeOfValues);
extern "C" DECL_EXPORT void V3d_View_GraduatedTrihedronErase(void* instance);
extern "C" DECL_EXPORT void V3d_View_ColorScaleDisplay(void* instance);
extern "C" DECL_EXPORT void V3d_View_ColorScaleErase(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetFront(void* instance);
extern "C" DECL_EXPORT void V3d_View_Rotate1B801FD4(
	void* instance,
	double Ax,
	double Ay,
	double Az,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_Rotate51E06B8D(
	void* instance,
	double Ax,
	double Ay,
	double Az,
	double X,
	double Y,
	double Z,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_Rotate45D32271(
	void* instance,
	int Axe,
	double Angle,
	double X,
	double Y,
	double Z,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_RotateB8D50DF4(
	void* instance,
	int Axe,
	double Angle,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_RotateC85E5E0F(
	void* instance,
	double Angle,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_Move1B801FD4(
	void* instance,
	double Dx,
	double Dy,
	double Dz,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_MoveB8D50DF4(
	void* instance,
	int Axe,
	double Length,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_MoveC85E5E0F(
	void* instance,
	double Length,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_Translate1B801FD4(
	void* instance,
	double Dx,
	double Dy,
	double Dz,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_TranslateB8D50DF4(
	void* instance,
	int Axe,
	double Length,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_TranslateC85E5E0F(
	void* instance,
	double Length,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_Place83917674(
	void* instance,
	int x,
	int y,
	double aZoomFactor);
extern "C" DECL_EXPORT void V3d_View_Turn1B801FD4(
	void* instance,
	double Ax,
	double Ay,
	double Az,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_TurnB8D50DF4(
	void* instance,
	int Axe,
	double Angle,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_TurnC85E5E0F(
	void* instance,
	double Angle,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_SetEye9282A951(
	void* instance,
	double X,
	double Y,
	double Z);
extern "C" DECL_EXPORT void V3d_View_SetProj9282A951(
	void* instance,
	double Vx,
	double Vy,
	double Vz);
extern "C" DECL_EXPORT void V3d_View_SetProj17AA5025(
	void* instance,
	int Orientation);
extern "C" DECL_EXPORT void V3d_View_SetAt9282A951(
	void* instance,
	double X,
	double Y,
	double Z);
extern "C" DECL_EXPORT void V3d_View_SetUp9282A951(
	void* instance,
	double Vx,
	double Vy,
	double Vz);
extern "C" DECL_EXPORT void V3d_View_SetUp17AA5025(
	void* instance,
	int Orientation);
extern "C" DECL_EXPORT void V3d_View_SetViewOrientationDefault(void* instance);
extern "C" DECL_EXPORT void V3d_View_ResetViewOrientation(void* instance);
extern "C" DECL_EXPORT void V3d_View_Panning1B801FD4(
	void* instance,
	double Dx,
	double Dy,
	double aZoomFactor,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_SetCenter9F0E714F(
	void* instance,
	double Xc,
	double Yc);
extern "C" DECL_EXPORT void V3d_View_SetCenter5107F6FE(
	void* instance,
	int X,
	int Y);
extern "C" DECL_EXPORT void V3d_View_SetSizeD82819F3(
	void* instance,
	double Size);
extern "C" DECL_EXPORT void V3d_View_SetZoomC85E5E0F(
	void* instance,
	double Coef,
	bool Start);
extern "C" DECL_EXPORT void V3d_View_SetAxialScale9282A951(
	void* instance,
	double Sx,
	double Sy,
	double Sz);
extern "C" DECL_EXPORT void V3d_View_FitAll7B00BEA(
	void* instance,
	double Coef,
	bool FitZ,
	bool update);
extern "C" DECL_EXPORT void V3d_View_ZFitAllD82819F3(
	void* instance,
	double Coef);
extern "C" DECL_EXPORT void V3d_View_DepthFitAll9F0E714F(
	void* instance,
	double Aspect,
	double Margin);
extern "C" DECL_EXPORT void V3d_View_SetComputedMode(void* instance, bool value);
extern "C" DECL_EXPORT bool V3d_View_ComputedMode(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetPlotter(void* instance, void* value);
extern "C" DECL_EXPORT void V3d_View_SetGridGraphicValues(void* instance, void* value);
extern "C" DECL_EXPORT void V3d_View_SetGridActivity(void* instance, bool value);
extern "C" DECL_EXPORT void V3d_View_SetProjModel(void* instance, int value);
extern "C" DECL_EXPORT int V3d_View_ProjModel(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetBackFacingModel(void* instance, int value);
extern "C" DECL_EXPORT int V3d_View_BackFacingModel(void* instance);
extern "C" DECL_EXPORT bool V3d_View_IsDepthTestEnabled(void* instance);
extern "C" DECL_EXPORT bool V3d_View_IsGLLightEnabled(void* instance);