Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/V3d/V3dView.cs

		public bool ComputedMode{
			set { 
				V3d_View_SetComputedMode(Instance, value);
			}
			get {
				return V3d_View_ComputedMode(Instance);
			}
		}
		public Graphic3dPlotter Plotter{
			set { 
				V3d_View_SetPlotter(Instance, value.Instance);
			}
		}
		public AspectGrid GridGraphicValues{
			set { 
				V3d_View_SetGridGraphicValues(Instance, value.Instance);
			}
		}
		public bool GridActivity{
			set { 
				V3d_View_SetGridActivity(Instance, value);
			}
		}
		public V3dTypeOfProjectionModel ProjModel{
			set { 
				V3d_View_SetProjModel(Instance, (int)value);
			}
			get {
				return (V3dTypeOfProjectionModel)V3d_View_ProjModel(Instance);
			}
		}
		public V3dTypeOfBackfacingModel BackFacingModel{
			set { 
				V3d_View_SetBackFacingModel(Instance, (int)value);
			}
			get {
				return (V3dTypeOfBackfacingModel)V3d_View_BackFacingModel(Instance);
			}
		}
		public bool IsDepthTestEnabled{
			get {
				return V3d_View_IsDepthTestEnabled(Instance);
			}
		}
		public bool IsGLLightEnabled{
			get {
				return V3d_View_IsGLLightEnabled(Instance);
			}
		}
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetWindow6DD76FB2(IntPtr instance, IntPtr IdWin);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetMagnifyD520CBEE(IntPtr instance, IntPtr IdWin,IntPtr aPreviousView,int x1,int y1,int x2,int y2);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Remove(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Update(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Redraw(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Redraw8C6D7843(IntPtr instance, int x,int y,int width,int height);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_MustBeResized(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_DoMapping(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_UpdateLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetBackgroundColor638950E1(IntPtr instance, int Type,double V1,double V2,double V3);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetBackgroundColor8FD7F48(IntPtr instance, IntPtr Color);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetBackgroundColor48F4F471(IntPtr instance, int Name);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetBgGradientColorsA313F140(IntPtr instance, IntPtr Color1,IntPtr Color2,int FillStyle,bool update);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetBgGradientColors4216A027(IntPtr instance, int Color1,int Color2,int FillStyle,bool update);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetBgGradientStyle86DFD8CC(IntPtr instance, int AMethod,bool update);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetBackgroundImage5C59B37F(IntPtr instance, string FileName,int FillStyle,bool update);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetBgImageStyle254163A9(IntPtr instance, int FillStyle,bool update);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetAxisBC7A5786(IntPtr instance, double X,double Y,double Z,double Vx,double Vy,double Vz);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetAntialiasingOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetAntialiasingOff(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetZCueingOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetZCueingOff(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetLightOn1C16FAC6(IntPtr instance, IntPtr MyLight);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetLightOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetLightOff1C16FAC6(IntPtr instance, IntPtr MyLight);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetLightOff(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_IsActiveLight1C16FAC6(IntPtr instance, IntPtr aLight);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetPlaneOn20B19CEF(IntPtr instance, IntPtr MyPlane);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetPlaneOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetPlaneOff20B19CEF(IntPtr instance, IntPtr MyPlane);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetPlaneOff(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_IsActivePlane20B19CEF(IntPtr instance, IntPtr aPlane);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ZBufferTriedronSetup9BCB825E(IntPtr instance, int XColor,int YColor,int ZColor,double SizeRatio,double AxisDiametr,int NbFacettes);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_TriedronDisplay4E80490A(IntPtr instance, int APosition,int AColor,double AScale,int AMode);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_TriedronErase(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_TriedronEcho14CB0F5D(IntPtr instance, int AType);
        //[DllImport("NaroOccCore.dll")]
        //private static extern void V3d_View_GetGraduatedTrihedronC3638B35(IntPtr instance, IntPtr xname,IntPtr yname,IntPtr zname,ref bool xdrawname,ref bool ydrawname,ref bool zdrawname,ref bool xdrawvalues,ref bool ydrawvalues,ref bool zdrawvalues,ref bool drawgrid,ref bool drawaxes,ref int nbx,ref int nby,ref int nbz,ref int xoffset,ref int yoffset,ref int zoffset,ref int xaxisoffset,ref int yaxisoffset,ref int zaxisoffset,ref bool xdrawtickmarks,ref bool ydrawtickmarks,ref bool zdrawtickmarks,ref int xtickmarklength,ref int ytickmarklength,ref int ztickmarklength,IntPtr gridcolor,IntPtr xnamecolor,IntPtr ynamecolor,IntPtr znamecolor,IntPtr xcolor,IntPtr ycolor,IntPtr zcolor,IntPtr fontOfNames,ref int styleOfNames,ref int sizeOfNames,IntPtr fontOfValues,ref int styleOfValues,ref int sizeOfValues);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_GraduatedTrihedronDisplayC3638B35(IntPtr instance, IntPtr xname,IntPtr yname,IntPtr zname,bool xdrawname,bool ydrawname,bool zdrawname,bool xdrawvalues,bool ydrawvalues,bool zdrawvalues,bool drawgrid,bool drawaxes,int nbx,int nby,int nbz,int xoffset,int yoffset,int zoffset,int xaxisoffset,int yaxisoffset,int zaxisoffset,bool xdrawtickmarks,bool ydrawtickmarks,bool zdrawtickmarks,int xtickmarklength,int ytickmarklength,int ztickmarklength,IntPtr gridcolor,IntPtr xnamecolor,IntPtr ynamecolor,IntPtr znamecolor,IntPtr xcolor,IntPtr ycolor,IntPtr zcolor,IntPtr fontOfNames,int styleOfNames,int sizeOfNames,IntPtr fontOfValues,int styleOfValues,int sizeOfValues);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_GraduatedTrihedronErase(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ColorScaleDisplay(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ColorScaleErase(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetFront(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Rotate1B801FD4(IntPtr instance, double Ax,double Ay,double Az,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Rotate51E06B8D(IntPtr instance, double Ax,double Ay,double Az,double X,double Y,double Z,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Rotate45D32271(IntPtr instance, int Axe,double Angle,double X,double Y,double Z,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_RotateB8D50DF4(IntPtr instance, int Axe,double Angle,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_RotateC85E5E0F(IntPtr instance, double Angle,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Move1B801FD4(IntPtr instance, double Dx,double Dy,double Dz,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_MoveB8D50DF4(IntPtr instance, int Axe,double Length,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_MoveC85E5E0F(IntPtr instance, double Length,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Translate1B801FD4(IntPtr instance, double Dx,double Dy,double Dz,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_TranslateB8D50DF4(IntPtr instance, int Axe,double Length,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_TranslateC85E5E0F(IntPtr instance, double Length,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Place83917674(IntPtr instance, int x,int y,double aZoomFactor);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Turn1B801FD4(IntPtr instance, double Ax,double Ay,double Az,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_TurnB8D50DF4(IntPtr instance, int Axe,double Angle,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_TurnC85E5E0F(IntPtr instance, double Angle,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetEye9282A951(IntPtr instance, double X,double Y,double Z);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetProj9282A951(IntPtr instance, double Vx,double Vy,double Vz);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetProj17AA5025(IntPtr instance, int Orientation);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetAt9282A951(IntPtr instance, double X,double Y,double Z);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetUp9282A951(IntPtr instance, double Vx,double Vy,double Vz);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetUp17AA5025(IntPtr instance, int Orientation);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetViewOrientationDefault(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ResetViewOrientation(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Panning1B801FD4(IntPtr instance, double Dx,double Dy,double aZoomFactor,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetCenter9F0E714F(IntPtr instance, double Xc,double Yc);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetCenter5107F6FE(IntPtr instance, int X,int Y);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetSizeD82819F3(IntPtr instance, double Size);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetZoomC85E5E0F(IntPtr instance, double Coef,bool Start);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetAxialScale9282A951(IntPtr instance, double Sx,double Sy,double Sz);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_FitAll7B00BEA(IntPtr instance, double Coef,bool FitZ,bool update);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ZFitAllD82819F3(IntPtr instance, double Coef);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_DepthFitAll9F0E714F(IntPtr instance, double Aspect,double Margin);
